--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -20,7 +20,7 @@
                 "webpack.config.js",
                 "--require",
                 "test/setup.js",
-                "test/**/*.spec.js"
+                "test/**/*.js"
             ],
             "sourceMaps": true,
             "env": {
