--- a/package.json
+++ b/package.json
@@ -14,10 +14,13 @@
   },
   "devDependencies": {
     "@vue/test-utils": "^1.0.0-beta.12",
+    "axios": "^0.18.0",
+    "axios-mock-adapter": "^1.15.0",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
     "babel-plugin-istanbul": "^4.1.5",
     "babel-preset-env": "^1.6.0",
+    "chai": "^4.1.2",
     "cross-env": "^5.0.5",
     "css-loader": "^0.28.7",
     "expect": "^21.2.1",
